[package]
name = "pml-lsp"
version = "0.3.0"
edition = "2021"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"

# Tree-sitter runtime
tree-sitter = "0.25"

# Your local grammar — the crate name is what your grammar's Cargo.toml declared
tree-sitter-aveva-pml-parser = { path = "https://github.com/djee79/tree-sitter-pml.git" }

